kubernetes/transmission/04-deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
  labels:
    app.kubernetes.io/name: transmission
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@midnight"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: transmission
          image: haugene/transmission-openvpn:${IMGTAG_TRANSMISSION_DEPLOY}
          securityContext:
            privileged: true
          ports:
            - name: admin
              protocol: TCP
              containerPort: 9091
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 2
            failureThreshold: 3
      volumes:
        - name: data
          hostPath:
            path: ${DOWNLOADS_PATH}
            type: DirectoryOrCreate
