kubernetes/transmission/03-ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  rules:
    - host: transmission.${DOMAIN_ROOT}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: admin
